infra/k8s/migos-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: migos-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: migos
  template:
    metadata:
      labels:
        app: migos
    spec:
      containers:
        - name: migos
          image: rgazonil/migos
---
apiVersion: v1
kind: Service
metadata:
  name: migos-clusterip-srv
spec:
  selector:
    app: migos
  type: ClusterIP
  ports:
    - name: migos
      protocol: TCP
      port: 3000
      targetPort: 3000
