infra/k8s/migos-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: migos-srv
spec:
  type: NodePort
  selector:
   app: migos
  ports:
    - name: migos
      protocol: TCP
      port: 3000
      targetPort: 3000
