infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  nginx.ingress.kubernetes.io/use-regex: 'true'
  rules:
    - host: migos.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: migos-clusterip-srv
                port:
                  number: 3000
